--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.13.5",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "cli": "^1.0.1",
     "cloudinary-react": "^1.8.1",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
