--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "generate": "graphql-codegen"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +22,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
+    "graphql-scalars": "^1.24.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.13",
     "prisma": "^6.5.0",
     "tsx": "^4.19.3",
