--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.5",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "cli": "^1.0.1",
     "cloudinary-react": "^1.8.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
@@ -23,7 +25,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@tailwindcss/postcss": "^4.0.17",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/estree": "^1.0.7",
+    "@types/node": "^22.13.15",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -32,9 +38,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.35",
     "sass": "^1.86.0",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.19.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
