--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp schema.graphql dist/",
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
     "generate": "graphql-codegen"
