--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,11 @@
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^5.0.3",
+    "@graphql-codegen/cli": "^5.0.7",
+    "@graphql-codegen/time": "^5.0.1",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-resolvers": "^4.5.1",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
